# DS_wet1

./: Array.h  CMakeLists.txt  Group.cpp  Group.h  Makefile  Movie.cpp  Movie.h  README.md  StreamingDBa1.cpp  StreamingDBa1.h  User.cpp  User.h  dry.docx  example_test0.in  example_test0.out  macros.h  main  main.cpp  maina1.cpp  test.out  test0.out
AVL/: AVL.h  Makefile  Node.h  class_defines.h  testing.cpp  testing_avl.cpp
Array/: Array.h
Classes/: Group.cpp  Group.h  Movie.cpp  Movie.h  User.cpp  User.h
